2001-01-25  Ulrich Drepper  <drepper@redhat.com>

	* math/Makefile (tests): Add test-tgmath.
	(CFLAGS-test-tgmath.c): New variable.
	* math/test-tgmath.c: New file.  Contributed by Jakub Jelinek.

	* conform/conformtest.pl: Handle allow-header in secondary headers
	correctly.

	* conform/data/fcntl.h-data: Mark symbols introduced in XPG6 with
	#ifdef.

	* conform/data/netinet/in.h-data: Use correct comment character.
	* conform/data/sys/stat.h-data: Likewise.

2001-01-25  Jakub Jelinek  <jakub@redhat.com>

	* math/tgmath.h (__TGMATH_BINARY_FIRST_REAL_ONLY,
	__TGMATH_BINARY_REAL_ONLY, __TGMATH_TERNARY_FIRST_SECOND_REAL_ONLY,
	__TGMATH_TERNARY_REAL_ONLY): Use proper arguments to
	__builtin_classify_type, add ##f suffixes where appropriate.
	(__TGMATH_UNARY_REAL_IMAG): Remove extraneous left parenthesis.
	(__TGMATH_BINARY_REAL_IMAG): Likewise, use proper arguments to
	__builtin_classify_type.
	(fma): Fix spelling of first argument.

2001-01-25  Ulrich Drepper  <drepper@redhat.com>

	* conform/data/unistd.h-data: Mark functions removed in XPG6
	correctly.

	* posix/unistd.h: Don't make functions removed in XPG6 available if
	__USE_XOPEN2K.

	* conform/conformtest.pl: Implement optional-constant.
	* conform/data/unistd.h-data: Use optional-constant wherever
	appropriate.

	* sysdeps/generic/bits/confname.h: Correct names of _SC_PBS
	constants and add _SC_STREAMS.
	* sysdeps/posix/sysconf.c (__sysconf): Likewise.

	* sysdeps/unix/sysv/linux/statvfs64.c: Rename to __statvfs64 and
	make old name weak alias.
	* sysdeps/generic/statvfs64.c: Likewise.
	* sysdeps/unix/sysv/linux/fstatvfs64.c: Rename to __fstatvfs64 and
	make old name weak alias.
	* sysdeps/generic/fstatvfs64.c: Likewise.
	* include/sys/statvfs.h: New file.

	* sysdeps/generic/bits/confname.h: Define _PC_REC_INCR_XFER_SIZE,
	_PC_REC_MAX_XFER_SIZE, _PC_REC_MIN_XFER_SIZE, and
	_PC_REC_XFER_ALIGN.
	* sysdeps/posix/pathconf.c (__pathconf): Implement handling of
	_PC_REC_INCR_XFER_SIZE, _PC_REC_MAX_XFER_SIZE,