@@ -1,5 +1,7 @@
 2001-01-25  Ulrich Drepper  <drepper@redhat.com>
 
+	* math/tgmath.h: Pretty printing.
+
 	* math/Makefile (tests): Add test-tgmath.
 	(CFLAGS-test-tgmath.c): New variable.
 	* math/test-tgmath.c: New file.  Contributed by Jakub Jelinek.
